# projeto_api_twitter

./: main.py  pyproject.toml  secretsKeys.py  service.py
